--- a/4DimenssionLLC/4DimensionsLLC.csproj
+++ b/4DimenssionLLC/4DimensionsLLC.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>_4DimenssionLLC</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
+  </ItemGroup>
+
 </Project>
